--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </head>
   
     <body>
-        <header>
+        <!-- <header>
             <h1>
                 WRITE YOUR OWN DAILY NOTES
             </h1>
-        </header>
+        </header> -->
 
 
        
